added pics to japs and pre colonial

--- a/START OVER/Japanese.html
+++ b/START OVER/Japanese.html
@@ -171,7 +171,6 @@
 
       </div>
 
-
     </div>
 
   </div>
@@ -196,7 +195,7 @@
 
   <div class="col">
     <div class="Arrival of Magellan Map">
-      <div class="street-view" id="magellan-street-view"></div>
+      <div class="street-view" id="pearlharbor-street-view"></div>
     </div>
   </div>
 
@@ -242,7 +241,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+           src="resources/bataan.jpg">
     </div>
   </div>
 
@@ -288,7 +287,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/manila.jpg">
+           src="resources/dm.jpg">
     </div>
   </div>
 
@@ -326,7 +325,7 @@
 
   <div class="col">
     <div class="Arrival of Magellan Map">
-      <div class="street-view" id="missionary-street-view"></div>
+      <div class="street-view" id="mcarthur-street-view"></div>
     </div>
   </div>
 
@@ -352,12 +351,6 @@
 
 <div class="popup" id="popup5">
 
-  <div class="col">
-    <div class="Establishment of the First Spanish Settlement Pic">
-      <img class="img"
-           src="resources/encomienda.jpg">
-    </div>
-  </div>
 
   <h3>1945 - Liberation, Reconstruction, and the End of Japanese Occupation</h3>
 
