--- a/START OVER/Precolonial.html
+++ b/START OVER/Precolonial.html
@@ -192,8 +192,9 @@
 <div class="popup" id="popup1">
 
   <div class="col">
-    <div class="Arrival of Magellan Map">
-      <div class="street-view" id="magellan-street-view"></div>
+    <div class="Establishment of the First Spanish Settlement Pic">
+      <img class="img"
+           src="resources/old.jpg">
     </div>
   </div>
 
@@ -226,7 +227,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+           src="resources/austro.jpg">
     </div>
   </div>
 
@@ -260,7 +261,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/manila.jpg">
+           src="resources/laguna.jpg">
     </div>
   </div>
 
@@ -293,8 +294,9 @@
 <div class="popup" id="popup4">
 
   <div class="col">
-    <div class="Arrival of Magellan Map">
-      <div class="street-view" id="missionary-street-view"></div>
+    <div class="Establishment of the First Spanish Settlement Pic">
+      <img class="img"
+           src="resources/sultan.jpg">
     </div>
   </div>
 
@@ -328,7 +330,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/encomienda.jpg">
+           src="resources/trade.jpg">
     </div>
   </div>
 
@@ -355,6 +357,7 @@
   <a href="#" onclick="toggle4()"> Close </a>
 
 </div>
+
 
 <script src="Precolonial.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/13665e3f06.js"></script>
