--- a/3rdRepub.html
+++ b/3rdRepub.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hatdog</title>
-  <link href="3rdRepub.css" rel="stylesheet">
+  <link href="CSS%20Files/3rdRepub.css" rel="stylesheet">
 
 </head>
 <body>
@@ -487,7 +487,7 @@
 
 </div>
 
-<script src="3rdRepub.js"></script>
+<script src="JavaScript/3rdRepub.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/13665e3f06.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBILxDLxvd-04oAL32KLWGzJWmccRJ9mbQ&callback=initMap"></script>
