changes to 3rdrepub

--- a/3rdRepub.html
+++ b/3rdRepub.html
@@ -271,7 +271,7 @@
 
   <div class="col">
     <div class="Arrival of Magellan Map">
-      <div class="street-view" id="magellan-street-view"></div>
+      <div class="street-view" id="independence-street-view"></div>
     </div>
   </div>
 
@@ -300,9 +300,8 @@
 <div class="popup" id="popup2">
 
   <div class="col">
-    <div class="Establishment of the First Spanish Settlement Pic">
-      <img class="img"
-           src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+    <div class="Arrival of Magellan Map">
+      <div class="street-view" id="military-street-view"></div>
     </div>
   </div>
 
@@ -329,7 +328,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/manila.jpg">
+           src="resources/quirino-1948.jpg">
     </div>
   </div>
 
@@ -355,8 +354,9 @@
 <div class="popup" id="popup4">
 
   <div class="col">
-    <div class="Arrival of Magellan Map">
-      <div class="street-view" id="missionary-street-view"></div>
+    <div class="Establishment of the First Spanish Settlement Pic">
+      <img class="img"
+           src="resources/ramon-magsaysay.webp">
     </div>
   </div>
 
@@ -384,7 +384,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/encomienda.jpg">
+           src="resources/garcia.jpg">
     </div>
   </div>
 
@@ -411,7 +411,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+           src="resources/macapagal.jpg">
     </div>
   </div>
 
@@ -438,7 +438,7 @@
   <div class="col">
     <div class="Establishment of the First Spanish Settlement Pic">
       <img class="img"
-           src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+           src="resources/marcos.jpg">
     </div>
   </div>
 
@@ -464,9 +464,8 @@
 <div class="popup" id="popup8">
 
   <div class="col">
-    <div class="Establishment of the First Spanish Settlement Pic">
-      <img class="img"
-           src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+    <div class="Arrival of Magellan Map">
+      <div class="street-view" id="martiallaw-street-view"></div>
     </div>
   </div>
 
