--- a/3rdRepub.html
+++ b/3rdRepub.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hatdog</title>
+  <title>Hibla ng Kasaysayan</title>
   <link href="CSS%20Files/3rdRepub.css" rel="stylesheet">
 
 </head>
@@ -61,7 +61,7 @@
               rebuilding the war-torn nation.
             </p>
 
-            <a href="#" onclick="toggle()"> Read More</a>
+            <a href="#" onclick="toggle(event)"> Read More</a>
 
 
           </div>
@@ -88,7 +88,7 @@
               Clark Air Base and Subic Naval Base.
             </p>
 
-            <a href="#" onclick="toggle1()"> Read More</a>
+            <a href="#" onclick="toggle1(event)"> Read More</a>
 
 
           </div>
@@ -113,7 +113,7 @@
               a focus on economic reconstruction after the war.
             </p>
 
-            <a href="#" onclick="toggle2()"> Read More</a>
+            <a href="#" onclick="toggle2(event)"> Read More</a>
 
 
           </div>
@@ -139,7 +139,7 @@
               through a combination of military action and grassroots
               initiatives.  </p>
 
-            <a href="#" onclick="toggle3()"> Read More</a>
+            <a href="#" onclick="toggle3(event)"> Read More</a>
 
 
           </div>
@@ -164,7 +164,7 @@
               prioritizing the interests of local businesses and
               promoting cultural nationalism. </p>
 
-            <a href="#" onclick="toggle4()"> Read More</a>
+            <a href="#" onclick="toggle4(event)"> Read More</a>
 
 
           </div>
@@ -189,7 +189,7 @@
               by shifting Independence Day from July 4 to June 12,
               commemorating the 1898 declaration of independence from Spain.</p>
 
-            <a href="#" onclick="toggle5()"> Read More</a>
+            <a href="#" onclick="toggle5(event)"> Read More</a>
 
 
           </div>
@@ -213,7 +213,7 @@
               Ferdinand Marcos, elected in 1965, initially gained popularity by
               emphasizing infrastructure development and military modernization.</p>
 
-            <a href="#" onclick="toggle6()"> Read More</a>
+            <a href="#" onclick="toggle6(event)"> Read More</a>
 
 
           </div>
@@ -237,7 +237,7 @@
               On September 21, 1972, Marcos declared Martial Law, citing threats
               from communist insurgents and separatist movements.</p>
 
-            <a href="#" onclick="toggle7()"> Read More</a>
+            <a href="#" onclick="toggle7(event)"> Read More</a>
 
 
           </div>
@@ -291,7 +291,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle()"> Close </a>
+  <a href="#" onclick="toggle(event)"> Close </a>
 
 </div>
 
@@ -317,7 +317,7 @@
     economies, they also symbolized continued American influence over
     Philippine sovereignty (Agoncillo, 1990, pp. 373–374).</p>
 
-  <a href="#" onclick="toggle1()"> Close </a>
+  <a href="#" onclick="toggle1(event)"> Close </a>
 
 </div>
 
@@ -345,7 +345,7 @@
     shortcomings of government policies (Agoncillo, 1990, pp. 374–376).
   </p>
 
-  <a href="#" onclick="toggle2()"> Close </a>
+  <a href="#" onclick="toggle2(event)"> Close </a>
 
 </div>
 
@@ -373,7 +373,7 @@
     governance (Agoncillo, 1990, pp. 376–377).
   </p>
 
-  <a href="#" onclick="toggle3()"> Close </a>
+  <a href="#" onclick="toggle3(event)"> Close </a>
 
 </div>
 
@@ -400,7 +400,7 @@
     economic challenges (Agoncillo, 1990, pp. 377–379).
   </p>
 
-  <a href="#" onclick="toggle4()"> Close </a>
+  <a href="#" onclick="toggle4(event)"> Close </a>
 
 </div>
 
@@ -427,7 +427,7 @@
     success (Agoncillo, 1990, pp. 379–380).
   </p>
 
-  <a href="#" onclick="toggle5()"> Close </a>
+  <a href="#" onclick="toggle5(event)"> Close </a>
 
 </div>
 
@@ -455,7 +455,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle6()"> Close </a>
+  <a href="#" onclick="toggle6(event)"> Close </a>
 
 </div>
 
@@ -482,7 +482,7 @@
     economic inequality, and political repression (Agoncillo, 1990, pp. 382–383).
   </p>
 
-  <a href="#" onclick="toggle7()"> Close </a>
+  <a href="#" onclick="toggle7(event)"> Close </a>
 
 </div>
 
