--- a/America.html
+++ b/America.html
@@ -16,10 +16,9 @@
         <nav class="navbar">
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#tranding">Periods</a></li>
-                    <li><a href="#references">References</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="front.html">Home</a></li>
+                    <li><a href="references.html">References</a></li>
+
                 </ul>
             </div>
         </nav>
@@ -60,7 +59,7 @@
                             Filipinos, expecting independence after defeating the Spanish, feel betrayed.
                         </p>
 
-                        <a href="#" onclick="toggle()"> Read More</a>
+                        <a href="#" onclick="toggle(event)"> Read More</a>
 
 
                     </div>
@@ -87,7 +86,7 @@
                             Aguinaldo was captured in 1901, ending major resistance.
                         </p>
 
-                        <a href="#" onclick="toggle1()"> Read More</a>
+                        <a href="#" onclick="toggle1(event)"> Read More</a>
 
 
                     </div>
@@ -114,7 +113,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle2()"> Read More</a>
+                        <a href="#" onclick="toggle2(event)"> Read More</a>
 
 
                     </div>
@@ -142,7 +141,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle3()"> Read More</a>
+                        <a href="#" onclick="toggle3(event)"> Read More</a>
 
 
                     </div>
@@ -169,7 +168,7 @@
                             pro-American elite.
                         </p>
 
-                        <a href="#" onclick="toggle4()"> Read More</a>
+                        <a href="#" onclick="toggle4(event)"> Read More</a>
 
 
                     </div>
@@ -196,7 +195,7 @@
                             political participation.
                         </p>
 
-                        <a href="#" onclick="toggle5()"> Read More</a>
+                        <a href="#" onclick="toggle5(event)"> Read More</a>
 
 
                     </div>
@@ -223,7 +222,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle6()"> Read More</a>
+                        <a href="#" onclick="toggle6(event)"> Read More</a>
 
 
                     </div>
@@ -249,7 +248,7 @@
                             and educational reform in preparation for full independence.
                         </p>
 
-                        <a href="#" onclick="toggle7()"> Read More</a>
+                        <a href="#" onclick="toggle7(event)"> Read More</a>
 
 
                     </div>
@@ -276,7 +275,7 @@
                             MacArthur, eventually liberate the country in 1945.
                         </p>
 
-                        <a href="#" onclick="toggle8()"> Read More</a>
+                        <a href="#" onclick="toggle8(event)"> Read More</a>
 
 
                     </div>
@@ -302,7 +301,7 @@
                             ending nearly five decades of American rule.
                         </p>
 
-                        <a href="#" onclick="toggle9()"> Read More</a>
+                        <a href="#" onclick="toggle9(event)"> Read More</a>
 
 
                     </div>
@@ -351,7 +350,7 @@
         sovereignty over the Philippines and sparks significant anti-American sentiments.
     </p>
 
-    <a href="#" onclick="toggle()"> Close </a>
+    <a href="#" onclick="toggle(event)"> Close </a>
 
 </div>
 
@@ -400,7 +399,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle1()"> Close </a>
+    <a href="#" onclick="toggle1(event)"> Close </a>
 
 </div>
 
@@ -433,7 +432,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle2()"> Close </a>
+    <a href="#" onclick="toggle2(event)"> Close </a>
 
 </div>
 
@@ -471,7 +470,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle3()"> Close </a>
+    <a href="#" onclick="toggle3(event)"> Close </a>
 
 </div>
 
@@ -519,7 +518,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle4()"> Close </a>
+    <a href="#" onclick="toggle4(event)"> Close </a>
 
 </div>
 
@@ -566,7 +565,7 @@
 
     </p>
 
-    <a href="#" onclick="toggle5()"> Close </a>
+    <a href="#" onclick="toggle5(event)"> Close </a>
 
 </div>
 
@@ -619,7 +618,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle6()"> Close </a>
+    <a href="#" onclick="toggle6(event)"> Close </a>
 
 </div>
 
@@ -688,7 +687,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle7()"> Close </a>
+    <a href="#" onclick="toggle7(event)"> Close </a>
 
 </div>
 
@@ -753,7 +752,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle8()"> Close </a>
+    <a href="#" onclick="toggle8(event)"> Close </a>
 
 </div>
 
@@ -797,7 +796,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle9()"> Close </a>
+    <a href="#" onclick="toggle9(event)"> Close </a>
 
 </div>
 
