--- a/Contemp.html
+++ b/Contemp.html
@@ -61,7 +61,7 @@
                             allegations of plunder.
                         </p>
 
-                        <a href="#" onclick="toggle()"> Read More</a>
+                        <a href="#" onclick="toggle(event)"> Read More</a>
 
 
                     </div>
@@ -87,7 +87,7 @@
                             and plunder.
                         </p>
 
-                        <a href="#" onclick="toggle1()"> Read More</a>
+                        <a href="#" onclick="toggle1(event)"> Read More</a>
 
 
                     </div>
@@ -111,7 +111,7 @@
                             EDSA III occurred in May 2001, shortly after Estrada's arrest.
                         </p>
 
-                        <a href="#" onclick="toggle2()"> Read More</a>
+                        <a href="#" onclick="toggle2(event)"> Read More</a>
 
 
                     </div>
@@ -137,7 +137,7 @@
                             infrastructure, and the IT industry.
                         </p>
 
-                        <a href="#" onclick="toggle3()"> Read More</a>
+                        <a href="#" onclick="toggle3(event)"> Read More</a>
 
 
                     </div>
@@ -164,7 +164,7 @@
                             investment-grade credit ratings.
                         </p>
 
-                        <a href="#" onclick="toggle4()"> Read More</a>
+                        <a href="#" onclick="toggle4(event)"> Read More</a>
 
 
                     </div>
@@ -190,7 +190,7 @@
                             of extrajudicial killings and drew international condemnation.
                         </p>
 
-                        <a href="#" onclick="toggle5()"> Read More</a>
+                        <a href="#" onclick="toggle5(event)"> Read More</a>
 
 
                     </div>
@@ -216,7 +216,7 @@
                             comeback for the Marcos family.
                         </p>
 
-                        <a href="#" onclick="toggle6()"> Read More</a>
+                        <a href="#" onclick="toggle6(event)"> Read More</a>
 
 
                     </div>
@@ -249,8 +249,9 @@
 <div class="popup" id="popup1">
 
     <div class="col">
-        <div class="Arrival of Magellan Map">
-            <div class="street-view" id="magellan-street-view"></div>
+        <div class="Establishment of the First Spanish Settlement Pic">
+            <img class="img"
+                 src="resources/estrada.jpg">
         </div>
     </div>
 
@@ -273,7 +274,7 @@
         President Gloria Macapagal Arroyo assumed the presidency.
     </p>
 
-    <a href="#" onclick="toggle()"> Close </a>
+    <a href="#" onclick="toggle(event)"> Close </a>
 
 </div>
 
@@ -282,9 +283,8 @@
 <div class="popup" id="popup2">
 
     <div class="col">
-        <div class="Establishment of the First Spanish Settlement Pic">
-            <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+        <div class="Arrival of Magellan Map">
+            <div class="street-view" id="edsa-street-view"></div>
         </div>
     </div>
 
@@ -299,7 +299,7 @@
 
     </p>
 
-    <a href="#" onclick="toggle1()"> Close </a>
+    <a href="#" onclick="toggle1(event)"> Close </a>
 
 </div>
 
@@ -308,9 +308,8 @@
 <div class="popup" id="popup3">
 
     <div class="col">
-        <div class="Establishment of the First Spanish Settlement Pic">
-            <img class="img"
-                 src="resources/manila.jpg">
+        <div class="Arrival of Magellan Map">
+            <div class="street-view" id="edsa-street-view2"></div>
         </div>
     </div>
 
@@ -325,7 +324,7 @@
 
     </p>
 
-    <a href="#" onclick="toggle2()"> Close </a>
+    <a href="#" onclick="toggle2(event)"> Close </a>
 
 </div>
 
@@ -334,8 +333,9 @@
 <div class="popup" id="popup4">
 
     <div class="col">
-        <div class="Arrival of Magellan Map">
-            <div class="street-view" id="missionary-street-view"></div>
+        <div class="Establishment of the First Spanish Settlement Pic">
+            <img class="img"
+                 src="resources/arroyo.jpg">
         </div>
     </div>
 
@@ -357,7 +357,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle3()"> Close </a>
+    <a href="#" onclick="toggle3(event)"> Close </a>
 
 </div>
 
@@ -368,7 +368,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/encomienda.jpg">
+                 src="resources/noynoy.jpg">
         </div>
     </div>
 
@@ -390,7 +390,7 @@
         in a favorable ruling for the Philippines in 2016.
     </p>
 
-    <a href="#" onclick="toggle4()"> Close </a>
+    <a href="#" onclick="toggle4(event)"> Close </a>
 
 </div>
 
@@ -401,7 +401,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/resistance.jpg">
+                 src="resources/du30.jpg">
         </div>
     </div>
 
@@ -421,7 +421,7 @@
         with allegations of mismanagement and inadequate healthcare response.
     </p>
 
-    <a href="#" onclick="toggle5()"> Close </a>
+    <a href="#" onclick="toggle5(event)"> Close </a>
 
 </div>
 
@@ -432,7 +432,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/war.webp">
+                 src="resources/bbm.webp">
         </div>
     </div>
 
@@ -448,7 +448,7 @@
 
     </p>
 
-    <a href="#" onclick="toggle6()"> Close </a>
+    <a href="#" onclick="toggle6(event)"> Close </a>
 
 </div>
 
