--- a/Japanese.html
+++ b/Japanese.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hatdog</title>
+  <title>Hibla ng Kasaysayan</title>
   <link href="CSS%20Files/Japanese.css" rel="stylesheet">
 
 </head>
@@ -58,7 +58,7 @@
               also set the stage for the Pacific theater's intensification.
             </p>
 
-            <a href="#" onclick="toggle()"> Read More</a>
+            <a href="#" onclick="toggle(event)"> Read More</a>
 
 
           </div>
@@ -84,7 +84,7 @@
               strength of American and Filipino defenders in the Battle of Bataan.
             </p>
 
-            <a href="#" onclick="toggle1()"> Read More</a>
+            <a href="#" onclick="toggle1(event)"> Read More</a>
 
 
           </div>
@@ -109,7 +109,7 @@
               establishing a puppet government under the leadership of José P. Laurel.
             </p>
 
-            <a href="#" onclick="toggle2()"> Read More</a>
+            <a href="#" onclick="toggle2(event)"> Read More</a>
 
 
           </div>
@@ -135,7 +135,7 @@
               of Leyte, fulfilling his iconic promise: "I shall return."
             </p>
 
-            <a href="#" onclick="toggle3()"> Read More</a>
+            <a href="#" onclick="toggle3(event)"> Read More</a>
 
 
           </div>
@@ -161,7 +161,7 @@
               was particularly devastating, resulting in the near-total destruction
               of the capital and significant civilian casualties.</p>
 
-            <a href="#" onclick="toggle4()"> Read More</a>
+            <a href="#" onclick="toggle4(event)"> Read More</a>
 
 
           </div>
@@ -230,7 +230,7 @@
 
   </p>
 
-  <a href="#" onclick="toggle()"> Close </a>
+  <a href="#" onclick="toggle(event)"> Close </a>
 
 </div>
 
@@ -276,7 +276,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle1()"> Close </a>
+  <a href="#" onclick="toggle1(event)"> Close </a>
 
 </div>
 
@@ -315,7 +315,7 @@
     operations (Agoncillo, 1990, pp. 368–369).
   </p>
 
-  <a href="#" onclick="toggle2()"> Close </a>
+  <a href="#" onclick="toggle2(event)"> Close </a>
 
 </div>
 
@@ -343,7 +343,7 @@
     in the Pacific (Agoncillo, 1990, p. 370).
   </p>
 
-  <a href="#" onclick="toggle3()"> Close </a>
+  <a href="#" onclick="toggle3(event)"> Close </a>
 
 </div>
 
@@ -373,7 +373,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle4()"> Close </a>
+  <a href="#" onclick="toggle4(event)"> Close </a>
 
 </div>
 
