--- a/Precolonial.html
+++ b/Precolonial.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hatdog</title>
+  <title>Hibla ng Kasaysayan</title>
   <link href="CSS%20Files/Precolonial.css" rel="stylesheet">
 
 </head>
@@ -56,7 +56,7 @@
               The earliest human presence in the Philippines dates back approximately 500,000 years, as evidenced by the discovery of the fossilized remains of Homo luzonensis in Callao Cave, Cagayan in 2019.
             </p>
 
-            <a href="#" onclick="toggle()"> Read More</a>
+            <a href="#" onclick="toggle(event)"> Read More</a>
 
 
           </div>
@@ -84,7 +84,7 @@
               communities.
             </p>
 
-            <a href="#" onclick="toggle1()"> Read More</a>
+            <a href="#" onclick="toggle1(event)"> Read More</a>
 
 
           </div>
@@ -109,7 +109,7 @@
               Inscription (LCI) is the oldest written document in the Philippines.
             </p>
 
-            <a href="#" onclick="toggle2()"> Read More</a>
+            <a href="#" onclick="toggle2(event)"> Read More</a>
 
 
           </div>
@@ -134,7 +134,7 @@
               a datu or chieftain, became the dominant form of governance.
             </p>
 
-            <a href="#" onclick="toggle3()"> Read More</a>
+            <a href="#" onclick="toggle3(event)"> Read More</a>
 
 
           </div>
@@ -158,7 +158,7 @@
               The Philippines was an active participant in trade networks connecting
               Southeast Asia, China, India, and the Malay Peninsula. </p>
 
-            <a href="#" onclick="toggle4()"> Read More</a>
+            <a href="#" onclick="toggle4(event)"> Read More</a>
 
 
           </div>
@@ -216,7 +216,7 @@
 
   </p>
 
-  <a href="#" onclick="toggle()"> Close </a>
+  <a href="#" onclick="toggle(event)"> Close </a>
 
 </div>
 
@@ -250,7 +250,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle1()"> Close </a>
+  <a href="#" onclick="toggle1(event)"> Close </a>
 
 </div>
 
@@ -285,7 +285,7 @@
 
 
 
-  <a href="#" onclick="toggle2()"> Close </a>
+  <a href="#" onclick="toggle2(event)"> Close </a>
 
 </div>
 
@@ -319,7 +319,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle3()"> Close </a>
+  <a href="#" onclick="toggle3(event)"> Close </a>
 
 </div>
 
@@ -354,7 +354,7 @@
   </p>
 
 
-  <a href="#" onclick="toggle4()"> Close </a>
+  <a href="#" onclick="toggle4(event)"> Close </a>
 
 </div>
 
