--- a/Spanish.html
+++ b/Spanish.html
@@ -59,7 +59,7 @@
                             hands of the warrior Lapu-Lapu.
                         </p>
 
-                        <a href="#" onclick="toggle()"> Read More</a>
+                        <a href="#" onclick="toggle(event)"> Read More</a>
 
 
                     </div>
@@ -85,7 +85,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle1()"> Read More</a>
+                        <a href="#" onclick="toggle1(event)"> Read More</a>
 
 
                     </div>
@@ -112,7 +112,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle2()"> Read More</a>
+                        <a href="#" onclick="toggle2(event)"> Read More</a>
 
 
                     </div>
@@ -139,7 +139,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle3()"> Read More</a>
+                        <a href="#" onclick="toggle3(event)"> Read More</a>
 
 
                     </div>
@@ -166,7 +166,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle4()"> Read More</a>
+                        <a href="#" onclick="toggle4(event)"> Read More</a>
 
 
                     </div>
@@ -193,7 +193,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle5()"> Read More</a>
+                        <a href="#" onclick="toggle5(event)"> Read More</a>
 
 
                     </div>
@@ -218,7 +218,7 @@
                             This event exposes the fragility of Spanish control and encourages more Filipino uprisings.
                         </p>
 
-                        <a href="#" onclick="toggle6()"> Read More</a>
+                        <a href="#" onclick="toggle6(event)"> Read More</a>
 
 
                     </div>
@@ -243,7 +243,7 @@
                             This period sees the emergence of Filipino intellectuals, like José Rizal, who advocate for reforms.
                         </p>
 
-                        <a href="#" onclick="toggle7()"> Read More</a>
+                        <a href="#" onclick="toggle7(event)"> Read More</a>
 
 
                     </div>
@@ -269,7 +269,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle8()"> Read More</a>
+                        <a href="#" onclick="toggle8(event)"> Read More</a>
 
 
                     </div>
@@ -295,7 +295,7 @@
                             Rizal's novels Noli Me Tangere and El Filibusterismo critique Spanish abuses.
                         </p>
 
-                        <a href="#" onclick="toggle9()"> Read More</a>
+                        <a href="#" onclick="toggle9(event)"> Read More</a>
 
 
                     </div>
@@ -321,7 +321,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle10()"> Read More</a>
+                        <a href="#" onclick="toggle10(event)"> Read More</a>
 
 
                     </div>
@@ -347,7 +347,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle11()"> Read More</a>
+                        <a href="#" onclick="toggle11(event)"> Read More</a>
 
 
                     </div>
@@ -373,7 +373,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle12()"> Read More</a>
+                        <a href="#" onclick="toggle12(event)"> Read More</a>
 
 
                     </div>
@@ -399,7 +399,7 @@
 
                         </p>
 
-                        <a href="#" onclick="toggle13()"> Read More</a>
+                        <a href="#" onclick="toggle13(event)"> Read More</a>
 
 
                     </div>
@@ -466,7 +466,7 @@
         to control trade between East and West.
     </p>
 
-    <a href="#" onclick="toggle()"> Close </a>
+    <a href="#" onclick="toggle(event)"> Close </a>
 
 </div>
 
@@ -496,7 +496,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle1()"> Close </a>
+    <a href="#" onclick="toggle1(event)"> Close </a>
 
 </div>
 
@@ -528,7 +528,7 @@
 
 
 
-    <a href="#" onclick="toggle2()"> Close </a>
+    <a href="#" onclick="toggle2(event)"> Close </a>
 
 </div>
 
@@ -557,7 +557,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle3()"> Close </a>
+    <a href="#" onclick="toggle3(event)"> Close </a>
 
 </div>
 
@@ -585,7 +585,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle4()"> Close </a>
+    <a href="#" onclick="toggle4(event)"> Close </a>
 
 </div>
 
@@ -618,7 +618,7 @@
 
     </p>
 
-    <a href="#" onclick="toggle5()"> Close </a>
+    <a href="#" onclick="toggle5(event)"> Close </a>
 
 </div>
 
@@ -651,7 +651,7 @@
 
 
 
-    <a href="#" onclick="toggle6()"> Close </a>
+    <a href="#" onclick="toggle6(event)"> Close </a>
 
 </div>
 
@@ -683,7 +683,7 @@
 
 
 
-    <a href="#" onclick="toggle7()"> Close </a>
+    <a href="#" onclick="toggle7(event)"> Close </a>
 
 </div>
 
@@ -712,7 +712,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle8()"> Close </a>
+    <a href="#" onclick="toggle8(event)"> Close </a>
 
 </div>
 
@@ -742,7 +742,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle9()"> Close </a>
+    <a href="#" onclick="toggle9(event)"> Close </a>
 
 </div>
 
@@ -764,7 +764,7 @@
         laying the groundwork for nationwide resistance against Spanish rule.
     </p>
 
-    <a href="#" onclick="toggle10()"> Close </a>
+    <a href="#" onclick="toggle10(event)"> Close </a>
 
 </div>
 
@@ -808,7 +808,7 @@
         to control trade between East and West.
     </p>
 
-    <a href="#" onclick="toggle11()"> Close </a>
+    <a href="#" onclick="toggle11(event)"> Close </a>
 
 </div>
 
@@ -831,7 +831,7 @@
     </p>
 
 
-    <a href="#" onclick="toggle12()"> Close </a>
+    <a href="#" onclick="toggle12(event)"> Close </a>
 
 </div>
 
@@ -855,7 +855,7 @@
 
 
 
-    <a href="#" onclick="toggle13()"> Close </a>
+    <a href="#" onclick="toggle13(event)"> Close </a>
 
 </div>
 
