--- a/front.html
+++ b/front.html
@@ -58,7 +58,7 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                            <h1><a class="btn" href="front.html">Silipin</a></h1>
+                            <h1><a class="btn" href="Precolonial.html">Silipin</a></h1>
                                 <h2>Pre-Colonial Period</h2>
                                 <h3>500,000BC - 15th Century</h3>
                             </div>
@@ -74,7 +74,7 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                                <h1><a class="btn" href="front.html">Silipin</a></h1>
+                                <h1><a class="btn" href="Spanish.html">Silipin</a></h1>
                                 <h2>Spanish Colonial Period</h2>
                                 <h3>1521 - 1898</h3>
                             </div>
@@ -90,7 +90,7 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                                <h1><a class="btn" href="front.html">Silipin</a></h1>
+                                <h1><a class="btn" href="America.html">Silipin</a></h1>
                                 <h2>American Colonial Period</h2>
                                 <h3>1898 - 1946</h3>
                             </div>
@@ -106,7 +106,7 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                                <h1><a class="btn" href="front.html">Silipin</a></h1>
+                                <h1><a class="btn" href="Japanese.html">Silipin</a></h1>
                                 <h2>World War II and Japanese Occupation</h2>
                                 <h3>1941 – 1945</h3>
                             </div>
@@ -122,7 +122,7 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                                <h1><a class="btn" href="front.html">Silipin</a></h1>
+                                <h1><a class="btn" href="3rdRepub.html">Silipin</a></h1>
                                 <h2>Philippine Independence and the Third Republic</h2>
                                 <h3>1946 – 1972</h3>
                             </div>
@@ -138,7 +138,7 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                                <h1><a class="btn" href="front.html">Silipin</a></h1>
+                                <h1><a class="btn" href="Martial.html">Silipin</a></h1>
                                 <h2>Martial Law Era</h2>
                                 <h3>1972 – 1986</h3>
                             </div>
@@ -154,8 +154,8 @@
                     <div class="period-slide-container">
                         <div class="period-slide-content">
                             <div class="period-slide-content-bottom">
-                                <h1><a class="btn" href="front.html">Silipin</a></h1>
-                                <h2>Post-Marcos and Contemporary Period</h2>
+                                <h1><a class="btn" href="Contemp.html">Silipin</a></h1>
+                                <h2>Contemporary Period</h2>
                                 <h3>1986 – Present</h3>
                             </div>
                         </div>
