--- a/references.html
+++ b/references.html
@@ -15,7 +15,7 @@
         <header class="header">
             <a href="front.html" class="logo">Hibla ng Kasaysayan</a>
 
-            <nav class="navbar"
+            <nav class="navbar">
                 <div class="nav-links" id="navLinks">
                     <ul>
                         <li><a href="front.html">Home</a></li>
