--- a/Contemp.html
+++ b/Contemp.html
@@ -11,12 +11,12 @@
 <div class="blur" id="blur">
     <!--NAVIGATION BAR WITH LOGO-->
     <header class="header">
-        <a class="logo" href="front.html">Hibla ng Kasaysayan</a>
+        <a class="logo" href="index.html">Hibla ng Kasaysayan</a>
 
         <nav class="navbar">
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <li><a href="front.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="references.html">References</a></li>
                 </ul>
             </div>
