--- a/references.html
+++ b/references.html
@@ -13,12 +13,12 @@
     <body>
         <!--NAVIGATION BAR WITH LOGO-->
         <header class="header">
-            <a href="front.html" class="logo">Hibla ng Kasaysayan</a>
+            <a href="index.html" class="logo">Hibla ng Kasaysayan</a>
 
             <nav class="navbar">
                 <div class="nav-links" id="navLinks">
                     <ul>
-                        <li><a href="front.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                     </ul>
                 </div>
             </nav>
